--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -151,6 +151,124 @@
     "    return filtered_chars\n",
     "print(consective_dups('aaabbccdaa'))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "f14aaa5d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Abrahim Zaman A\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Capitlize First Letter of each Word\n",
+    "def capitilize_letter(s: str):\n",
+    "    capitilized = ''\n",
+    "    \n",
+    "    splitted: list[str] = s.split()\n",
+    "    \n",
+    "    for eachWord in splitted:\n",
+    "        capitilized += eachWord[0].upper() + eachWord[1:] + ' '\n",
+    "        \n",
+    "    return capitilized.strip()\n",
+    "    \n",
+    "print(capitilize_letter('abrahim zaman a'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "92fc4418",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "brhm zmn \n"
+     ]
+    }
+   ],
+   "source": [
+    "# Remove all vowels\n",
+    "def remove_vowels(s: str):\n",
+    "    vowels = {'a', 'e', 'i', 'o', 'u'}\n",
+    "    filtered_str = ''\n",
+    "\n",
+    "    for each_char in s:\n",
+    "        if each_char in vowels:\n",
+    "            continue\n",
+    "        else:\n",
+    "            filtered_str += each_char\n",
+    "        \n",
+    "        \n",
+    "    return filtered_str\n",
+    "    \n",
+    "print(remove_vowels('abrhaim zaman a'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 37,
+   "id": "6e20d732",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Anagrams\n",
+    "def check_anagrams(s: str):\n",
+    "    splitted = s.split()\n",
+    "    first_word = sorted(splitted[0])\n",
+    "\n",
+    "    for word in splitted:\n",
+    "        if sorted(word) != first_word:\n",
+    "            return False\n",
+    "    return True\n",
+    "            \n",
+    "\n",
+    "print(check_anagrams('abrahim miharba'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "bb1e13a7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Panagram\n",
+    "def check_panagram(s: str):\n",
+    "    tracked_chars = set({})\n",
+    "    cleaned_str = s.replace(' ', '')\n",
+    "    for current_char in cleaned_str:\n",
+    "        tracked_chars.add(current_char)\n",
+    "\n",
+    "    return True if len(tracked_chars) == 26 else False\n",
+    "\n",
+    "\n",
+    "print(check_panagram('the quick brown fox jumps over a lazy dog'))\n"
+   ]
   }
  ],
  "metadata": {
