--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 89,
    "id": "388c44f3",
    "metadata": {},
    "outputs": [
@@ -53,7 +53,6 @@
     "    rev_str = \"\"\n",
     "    for item in range(len(s) -1, -1, -1):\n",
     "        rev_str += s[item]\n",
-    "        item -= 1\n",
     "    return rev_str == s\n",
     "\n",
     "print(check_palindrome_v2('racecar'))\n",
@@ -62,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 90,
    "id": "c3c296b3",
    "metadata": {},
    "outputs": [
@@ -70,7 +69,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "8\n"
+      "9\n"
      ]
     }
    ],
@@ -86,12 +85,12 @@
     "            \n",
     "    return vowels_count\n",
     "\n",
-    "print(count_vowels('afecuimniusai'))\n"
+    "print(count_vowels('afecuimniusaio'))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 58,
+   "execution_count": null,
    "id": "1fa0f607",
    "metadata": {},
    "outputs": [
@@ -115,6 +114,7 @@
     "            seen_char[item] = 1\n",
     "        \n",
     "    for eachItem in seen_char:\n",
+    "        # Return least count char\n",
     "        if seen_char[eachItem] == 1:\n",
     "            return eachItem\n",
     "        \n",
@@ -154,7 +154,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 91,
    "id": "f14aaa5d",
    "metadata": {},
    "outputs": [
@@ -178,12 +178,12 @@
     "        \n",
     "    return capitilized.strip()\n",
     "    \n",
-    "print(capitilize_letter('abrahim zaman a'))\n"
+    "print(capitilize_letter(' abrahim zaman a '))\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 92,
    "id": "92fc4418",
    "metadata": {},
    "outputs": [
@@ -207,7 +207,6 @@
     "        else:\n",
     "            filtered_str += each_char\n",
     "        \n",
-    "        \n",
     "    return filtered_str\n",
     "    \n",
     "print(remove_vowels('abrhaim zaman a'))\n"
@@ -215,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": null,
    "id": "6e20d732",
    "metadata": {},
    "outputs": [
@@ -223,7 +222,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "True\n",
+      "False\n"
      ]
     }
    ],
@@ -239,7 +239,9 @@
     "    return True\n",
     "            \n",
     "\n",
-    "print(check_anagrams('abrahim miharba'))\n"
+    "# Testing\n",
+    "print(check_anagrams('abrahim miharba'))\n",
+    "print(check_anagrams('abrahim skeelton'))\n"
    ]
   },
   {
@@ -252,7 +254,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "True\n"
+      "True\n",
+      "False\n"
      ]
     }
    ],
@@ -266,8 +269,116 @@
     "\n",
     "    return True if len(tracked_chars) == 26 else False\n",
     "\n",
+    "# Testing\n",
+    "print(check_panagram('the quick brown fox jumps over a lazy dog'))\n",
+    "print(check_panagram('the quick brown fox jumps over a lazy'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "de3f8a85",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "programming\n",
+      "abrahimzaman\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Longest Word in a String\n",
+    "def find_longest_word(s: str):\n",
+    "    cleaned_str = s.split(' ')\n",
+    "    longest = cleaned_str[0]\n",
+    "    \n",
+    "    for current_word in cleaned_str:\n",
+    "        if len(current_word) > len(longest):\n",
+    "            longest = current_word\n",
+    "            \n",
+    "    return longest\n",
+    "    \n",
     "\n",
-    "print(check_panagram('the quick brown fox jumps over a lazy dog'))\n"
+    "# with Max function and key len\n",
+    "def find_longest_wordv2(s: str):\n",
+    "    cleaned_str = s.split(' ')\n",
+    "    longest = max(cleaned_str, key=len)   \n",
+    "    \n",
+    "    return longest\n",
+    "    \n",
+    "\n",
+    "print(find_longest_word('i am programming with abrahim'))\n",
+    "print(find_longest_wordv2('i am programming with abrahimzaman'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "fc85f482",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "True\n"
+     ]
+    }
+   ],
+   "source": [
+    "# String is Another rotation of String\n",
+    "def check_rotation(s: str):\n",
+    "    cleaned_str = s.split(' ');\n",
+    "    \n",
+    "    s1 = cleaned_str[0]\n",
+    "    s2 = cleaned_str[1]\n",
+    "    \n",
+    "    if s2 in s1 + s1:\n",
+    "        return True \n",
+    "    return False\n",
+    "\n",
+    "# Testing\n",
+    "print(check_rotation('abcde deabc'))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "8d308dc2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 8\n",
+      "2 7\n",
+      "3 6\n",
+      "5\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Two Pointer Example\n",
+    "from typing import List\n",
+    "\n",
+    "\n",
+    "def two_pointer(arr: List):\n",
+    "    left, right = 0, len(arr) - 1\n",
+    "    while left < right:\n",
+    "        print(arr[left], arr[right])     \n",
+    "        if arr[left] < 5:\n",
+    "            left += 1\n",
+    "        if arr[right] > 5:\n",
+    "            right -= 1\n",
+    "        if arr[left] and arr[right] == 5:\n",
+    "            return 5       \n",
+    "\n",
+    "        \n",
+    "print(two_pointer([1, 2, 3, 4, 5, 6, 7, 8]))\n"
    ]
   }
  ],
