--- a/notebook/main.ipynb
+++ b/notebook/main.ipynb
@@ -380,6 +380,291 @@
     "        \n",
     "print(two_pointer([1, 2, 3, 4, 5, 6, 7, 8]))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "57d81845",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "200\n",
+      "30\n",
+      "0b1010\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Let's do some basic stuff to make it more powerful\n",
+    "# We can do alot of things with python.\n",
+    "# Let's see how can we define variables:\n",
+    "a = 10\n",
+    "b = 20\n",
+    "c = a * b\n",
+    "\n",
+    "print(c)\n",
+    "\n",
+    "# Let's see multi-line\n",
+    "a, b, c = 10, 20, a + b\n",
+    "\n",
+    "print(c)\n",
+    "\n",
+    "# That's super amazing btw.\n",
+    "# Let's learn more \n",
+    "a = 10\n",
+    "b =  10.0\n",
+    "c = 'c'\n",
+    "d = 'ibrahim'\n",
+    "e = bin(a)\n",
+    "\n",
+    "# 1000 in binary means 8\n",
+    "# & 1010 means 10 as 10 means 2\n",
+    "# 00 -> 01 -> 10 -> 11 -> 100\n",
+    "\n",
+    "print(e)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "id": "183376a2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "4\n",
+      "2\n"
+     ]
+    }
+   ],
+   "source": [
+    "def strStr(haystack: str, needle: str):\n",
+    "    if needle == \"\":\n",
+    "        return 0\n",
+    "    \n",
+    "    # debugging\n",
+    "    print(len(haystack) - len(needle) + 1)\n",
+    "    for i in range(len(haystack) - len(needle) + 1):\n",
+    "        if haystack[i:i+len(needle)] == needle:\n",
+    "            return i\n",
+    "\n",
+    "    return -1\n",
+    "\n",
+    "\n",
+    "print(strStr(\"hello\", \"ll\"))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "7b5a489b",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[['eat', 'tea', 'ate'], ['tan', 'nat'], ['bat']]\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Group Anagrams\n",
+    "def group_anagrams(items):\n",
+    "    if len(items) < 1:\n",
+    "        return []\n",
+    "    \n",
+    "    cache = { }\n",
+    "    \n",
+    "    \n",
+    "    for current_word in items:\n",
+    "        group_key = ''.join(sorted(current_word))\n",
+    "        \n",
+    "        if group_key in cache:\n",
+    "            cache[group_key].append(current_word)\n",
+    "        else:\n",
+    "            cache[group_key] = [current_word]\n",
+    "        \n",
+    "    return list(cache.values())\n",
+    "\n",
+    "print(group_anagrams([\"eat\", \"tea\", \"tan\", \"ate\", \"nat\", \"bat\"]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3c5c6932",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Dumping the closest to zero:\n",
+    "def find_closest_to_zero(nums):\n",
+    "    closest = nums[0]\n",
+    "    \n",
+    "    for num in nums[1:]:\n",
+    "        if abs(num) < abs(closest):\n",
+    "            closest = num\n",
+    "        elif abs(num) == abs(closest):\n",
+    "            closest = max(closest, num)  # pick the larger value in case of tie\n",
+    "    \n",
+    "    return closest\n",
+    "\n",
+    "\n",
+    "print(find_closest_to_zero([-1, -4, -3, 1, 5, 3, 4]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 58,
+   "id": "5c5fad8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "fp1fq2sr3sf3sf4\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Merge words\n",
+    "from typing import List\n",
+    "\n",
+    "def merge_words(arr: List[str]) -> str: \n",
+    "    muted = ''\n",
+    "    \n",
+    "    # Challenge: Find the min\n",
+    "    previous_min = len(arr[0])\n",
+    "    minmum = previous_min\n",
+    "    \n",
+    "    for eachItem in arr[1:]:\n",
+    "        minmum = min(previous_min, len(eachItem))\n",
+    "    \n",
+    "    \n",
+    "    for i in range(minmum):\n",
+    "        for x in arr:\n",
+    "            muted += x[i]\n",
+    "            \n",
+    "    # extra:\n",
+    "    for eachItem in arr:\n",
+    "        muted += eachItem[minmum:]\n",
+    "    return muted   \n",
+    "\n",
+    "\n",
+    "print(merge_words([\"ffsss\", \"pqrff\", \"12334\"]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 78,
+   "id": "3da70c9a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "flower\n",
+      "here is flower: flo\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Largest Common Prefix\n",
+    "from typing import List \n",
+    "\n",
+    "def longestCommonPrefix(strs: List[str]) -> str:\n",
+    "    # We need to find the longest common prefix;\n",
+    "    # Base case:\n",
+    "    if len(strs) < 1:\n",
+    "        return \"\"\n",
+    "    \n",
+    "    if len(strs) == 1:\n",
+    "        return strs[0]\n",
+    "    \n",
+    "    # Main thing\n",
+    "    cause = {}\n",
+    "    common = ''\n",
+    "    current_word = 1\n",
+    "    \n",
+    "    for idx, each_char in enumerate(strs[0]):\n",
+    "        cause[each_char] = idx\n",
+    "        \n",
+    "    while current_word < len(strs):\n",
+    "        for each_char in strs[current_word]:\n",
+    "            print(f\"{strs[current_word]}\")\n",
+    "            if current_word < len(strs) and each_char in cause and cause[each_char] == current_word - 1:\n",
+    "                common += each_char\n",
+    "        current_word += 1\n",
+    "                \n",
+    "    return f\"here is flower: {common}\"\n",
+    "\n",
+    "print(longestCommonPrefix([\"flower\",\"flower\",\"flower\",\"flower\"]))\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 113,
+   "id": "3266d465",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "a\n",
+      "b\n",
+      "c\n"
+     ]
+    }
+   ],
+   "source": [
+    "cause = {\n",
+    "    0: 'a',\n",
+    "    1: 'b',\n",
+    "    2: 'c'\n",
+    "}\n",
+    "\n",
+    "arr = ['a', 'b', 'c']\n",
+    "current = 0\n",
+    "\n",
+    "while current < len(arr):\n",
+    "    print(arr[current])\n",
+    "    if current in cause and arr[current] == cause[current]:\n",
+    "        pass\n",
+    "    current += 1\n"
+   ]
   }
  ],
  "metadata": {
@@ -398,7 +683,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.13.2"
+   "version": "3.13.3"
   }
  },
  "nbformat": 4,
